--- a/css/sb-admin.css
+++ b/css/sb-admin.css
@@ -23,7 +23,7 @@ body {
 
 #page-wrapper {
     width: 100%;
-    padding: 0;
+    
     background-color: #fff;
 }
 
@@ -50,7 +50,7 @@ th {
     }
 
     #page-wrapper {
-        padding: 10px;
+        padding-left: 150px;
     }
 }
 
